tests/paczka1/fuzzy1/68267599.err
Error in line 1: A9 A9 91,6
Error in line 3: BuIcusCu A9 32,6
Error in line 7: A9 A567 92,9
Error in line 6: QpzrZ A9 75,6
Error in line 9: A9 A567 88,3
Error in line 12: QpzrZ A206 24,8
Error in line 14: lCivQ9myjjN A206 21,5
Error in line 26: zTqq7Kz A886 18,3
Error in line 30: o1ei4Pae A886 21,8
Error in line 38: Qpj A886 36,2
Error in line 31: o1ei4Pae A567 87,0
